<resources>
    <string name="app_name">ElectroWay</string>
    <string name="title_car_details">Car details</string>
    <string name="title_profile">Profile</string>
    <string name="title_stations">Stations</string>
    <string name="title_map">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="autonomy">Autonomy</string>
    <string name="average_consumption">Average consumption</string>
    <string name="e_mail">E-mail</string>
    <string name="person_example_com">person@example.com</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="sign_out">Sign out</string>
    <string name="add_station">Add station</string>
    <string name="remove">Remove</string>
    <string name="add_charging_point">Add charging point</string>
    <string name="remove_station">Remove station</string>
    <string name="back">Back</string>
    <string name="add_plug">Add plug</string>
    <string name="remove_plug">Remove plug</string>
    <string name="add_review">Add review</string>
    <string name="submit">Submit</string>
    <string name="review_text">Review text</string>
    <string name="add_car">Add car</string>
    <string name="battery_capacity">Battery capacity</string>
    <string name="charging_capacity">Charging capacity</string>
    <string name="plug_type">Plug type</string>
    <string name="vehicle_max_speed">Vehicle max speed</string>
    <string name="auxiliary_kwh">Auxiliary KWh</string>
    <string name="update">Update</string>
    <string name="find_route">Find route</string>
    <string name="status">Status</string>
    <string name="price_kw">Price (kW)</string>
    <string name="charging_speed_kw">Charging Speed (kW)</string>
    <string name="connector_type">Connector type</string>
    <string name="current_charge_in_kw">Current charge in kWh</string>
    <string name="close">Close</string>
    <string name="remove_charging_point">Remove Charging Point</string>
    <string name="remove_charging_plug">Remove charging plug</string>
    <string name="update_charging_plug">Update charging plug</string>
    <string name="select_template">Select template</string>
    <string name="select">Select</string>
    <string name="favourite">Favourite</string>
    <string name="show_reviews">Show reviews</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="favourites">Favourites</string>
    <string name="pay">Pay</string>
    <string name="charging_plug">Charging plug</string>
    <string name="charging_point">Charging point</string>
    <string name="total_kw">Total kW</string>
    <string name="update_wallet">Update wallet</string>
    <string name="client_id">Client ID</string>
    <string name="secret">Secret</string>
    <string name="button">Button</string>
</resources>