<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_car_details"
        android:icon="@drawable/car_details"
        android:title="@string/title_car_details" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/favourites"
        android:title="@string/favourites" />
    <item
        android:checkable="false"
        android:enabled="false"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_station_list"
        android:icon="@drawable/station"
        android:title="@string/title_stations" />

</menu>