<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.start.ForgotPasswordFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/start"
            tools:ignore="contentDescription" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:padding="15sp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email_address"
                    android:hint="@string/e_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/purple_dark"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:autofillHints="@string/password"
                    android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/purple_dark"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20sp"
            android:paddingHorizontal="10sp"
            android:orientation="horizontal"
            android:layout_gravity="center">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/sign_in_remember_me_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/remember_me"
                    android:textColorHint="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10sp">

                        <TextView
                            android:id="@+id/sign_in_forgot_password_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/forgot_password"
                            android:textSize="15sp" />
                </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:backgroundTint="#726c91"
            android:text="@string/sign_in"/>

        <Button
            android:id="@+id/sign_in_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:layout_gravity="center"
            android:text="@string/create_account"/>

</LinearLayout>